seezoon-demo/build/k8s/server-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: seezoon-cloud
  name: server-demo-deployment
spec:
  selector:
    matchLabels:
      app: server-demo
      version: v1
  replicas: 4
  template:
    metadata:
      labels:
        app: server-demo
        version: v1
    spec:
      containers:
        - name: server-demo
          image: server-demo:1.0.0-SNAPSHOT
      nodeSelector:
        application: server
