seezoon-demo/build/k8s/server-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: seezoon-cloud
  name: server-demo-service
spec:
  type: ClusterIP
  selector:
    app: server-demo
    version: v1
  ports:
    - port: 80
      targetPort: 80
